--- a/README.adoc
+++ b/README.adoc
@@ -87,15 +87,15 @@ endif::[]
 //------------------------------------ 
 == {assignment}
 
-{lastName}:: BRUEL
+{lastName}:: ANDRE
 
-{firstName}:: Jean-Michel
+{firstName}:: Pierre
 
 {group} #::
 
 [%interactive]
-- [x] {Enseignants}
-- [ ] 1
+- [ ] {Enseignants}
+- [x] 1
 - [ ] 2
 - [ ] 3
 - [ ] 4
